overflow-x fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;400;500;700&display=swap");
 
+body {
+  max-width: 100% !important;
+  overflow: hidden;
+}
+
 #root {
   font-family: "Roboto Slab", serif;
 }
 
 .container {
-  margin-top: 150px;
+  margin-top: 100px;
   display: grid;
   grid-template-columns: 50% 50%;
 }
