--- a/src/Components/Items.css
+++ b/src/Components/Items.css
@@ -1,5 +1,5 @@
 .clothing {
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .title {
